convert ListItem to functional component, query method for postgres

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -44,7 +44,7 @@ h1, h2, h3, h4, h5 {
 
 .item-container {
   width: 650px;
-  padding-bottom: 40px;
+  padding: 30px 15px 40px 15px;
   margin: 0px 15px;
   font-size: 1.15rem;
   border-bottom: 7px solid $color-e1d5c7; 
