--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -44,12 +44,21 @@ h1, h2, h3, h4, h5 {
 
 .item-container {
   width: 650px;
-  padding: 30px 15px 40px 15px;
+  /* padding: 30px 15px 40px 15px; */
+  padding: 15px 25px;
   margin: 0px 15px;
-  font-size: 1.15rem;
-  border-bottom: 7px solid $color-e1d5c7; 
+  font-size: 1.0rem;
+  color: $color-495c71;
+  /* border-bottom: 7px solid $color-e1d5c7;  */
   h2 {
     color: $color-68829E;
+    font-size: 16px;
+  }
+  p {
+    margin: 0px 0px 0px 3px;
+  }
+  span {
+    color: $color-495c71;
   }
   .content {
     color: $color-495c71;
