--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -21,11 +21,13 @@ h1, h2, h3, h4, h5 {
 }
 /* #df4747 */
 
-
 .left-sidebar {
   background-color: $color-bdcac3; /* #EEE */
   .site-list {
     margin-top: 100px;
+    h4 {
+      margin-left: 70px;
+    }
   }
   .item {
     margin-left: 80px;
@@ -40,6 +42,7 @@ h1, h2, h3, h4, h5 {
 
 .pusher {
   background-color: $color-efe3d5;
+  margin-left: 36px;
 }
 
 .item-container {
@@ -54,8 +57,8 @@ h1, h2, h3, h4, h5 {
     color: $color-68829E;
     font-size: 16px;
   }
-  p {
-    margin: 0px 0px 0px 3px;
+  p:nth-child(3) {
+    color: $color-495c71;
   }
   span {
     color: $color-495c71;
